[tool.poetry]
name = "one-file-rag"
version = "0.1.0"
description = ""
authors = ["Adam Bachman <adam.bachman@gmail.com>"]
readme = "README.md"
packages = [{ include = "one_file_rag" }]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
ollama = "^0.3.3"
sentence-transformers = "^3.2.0"
einops = "^0.8.0"
python-dotenv = "^1.0.1"
sqlite-vec = "^0.1.3"
pymupdf = "^1.24.11"
langchain-text-splitters = "^0.3.0"
anthropic = "^0.36.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
